# Master_Thesis

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  main.py  pyproject.toml
sh/: NDM_pipeline.sh  NDM_sample.sh  NDM_train.sh  compute_fid.sh  ddpm_hyper.sh  ddpm_inference.sh  ndm_inr_model_train_template.md  run_DDPM_sample.sh  run_DDPM_train.sh  run_NDM.sh  run_NDM_INR_training.sh  run_NDM_sample.sh  run_NDM_training.sh  run_VAE_INR_training.sh  run_ndm_time.sh  train_trans_inr.sh  transformer_ndm_inr.sh  vae.sh  vae_inr.sh
src/: sample.py  train.py  train_ndm_inr.py  train_ndm_inr_time.py
src/DDPM/: inference.py  run_training.py  train.py
src/INR/: inference.py  model.py  run_training.py  train.py  utils.py
src/NDM/: inference.py
src/configs/: general_config.py  hyperparameter_config.py  results_config.py  train_plot_config.py
src/dataloaders/: MNISTCoord.py  MNISTHyper.py
src/denoising_diffusion/: inference.py  output.err  output.out  run_training.py  train.py
src/implicit_neural_representation/: inference.py  model.py  run_training.py  train.py
src/inr_ddpm_hypernetwork/: dataloader.py  inference.py  model.py  output.err  output.out  run_training.py  train.py  utils.py
src/inr_hypernetwork/: dataloader.py  inference.py  model.py  run_training.py  train.py  utils.py
src/inr_mlp_hypernetwork/: inference.py  run_training.py  train.py
src/models/: INR.py  MNIST_classifier.py  NDM.py  NDM_INR.py  NDM_StaticTransInr.py  NDM_TemporalTransInr.py  VAE_INR.py  ddpm.py  helper_modules.py  inr_mlp_hypernet.py  inr_siren.py  inr_vae_hypernet.py  ndm.py  ndm__inr_time.py  ndm_inr.py  ndm_unet_module.py  trans_inr.py  trans_inr_encoder.py  trans_inr_helpers.py  trans_inr_temporal_encoder.py  vae.py  vae_coders.py  vae_modules.py
src/neural_latent_diffusion/: inference.py  model.py  run_training.py  train.py
src/scripts/: FID_table.py  calculate_fid.py  calculate_vae_inr_fid.py  compute_FID.py  latent_space_analysis_plot.py  plot_ndm_results.py  plotting_results.py  sample_and_classify.py  sample_comparison.py  sample_transINR_mnist.py  train_mlp_weight_encoder.py  train_transINR_mnist.py  upscaling_comparison.py
src/utility/: classifier_utils.py  dataset_builders.py  evaluation.py  general.py  inference.py  metrics_util.py  model_builders.py  parser_util.py  plotting.py  run_training.py  training.py
src/utils/: general_utils.py  parser_utils.py  plot_utils.py  run_inference_utils.py  run_training_utils.py  running_training_utils.py  training_utils.py
src_old/: sample.py  train.py  train_ndm_inr_time.py
src_old/dataloaders/: BinaryMNISTHyper.py
src_old/denoising_diffusion/: inference.py  model.py  run_training.py  train.py
src_old/implicit_neural_representation/: inference.py  model.py  run_training.py  train.py  utils.py
src_old/inr_ddpm_hypernetwork/: inference.py  model.py  run_training.py  train.py
src_old/inr_mlp_hypernetwork/: dataloader.py  inference.py  run_training.py  train.py
src_old/models/: ddpm.py  (+7 more)
(+70 files in other folders)
