[project]
name = "master-thesis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mypy>=1.19.1",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "pre-commit>=4.5.1",
    "ruff>=0.15.1",
]

[tool.ruff]
line-length = 140
target-version = "py311"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "TID", # flake8-tidy-imports
    "ARG", # flake8-unused-arguments
    "RUF", # Ruff-specific rules
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[mypy]
python_version = 3.11
ignore_missing_imports = true
strict = true
