[project]
name = "master-thesis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mypy>=1.19.1",
    "pandas<3",
    "pre-commit>=4.5.1",
    "ruff>=0.15.1",
    "torch==2.2.2",
    "numpy<2",
    "tqdm>=4.67.3",
    "matplotlib>=3.10.8",
    "types-tqdm>=4.67.3.20260205",
    "torchvision>=0.17.2",
    "seaborn>=0.13.2",
    "scipy>=1.17.1",
    "scikit-learn>=1.8.0",
    "pytorch-fid>=0.3.0",
    "einops>=0.8.2",
]

[tool.ruff]
line-length = 140
target-version = "py311"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "TID", # flake8-tidy-imports
    "ARG", # flake8-unused-arguments
    "RUF", # Ruff-specific rules
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[mypy]
python_version = 3.11
ignore_missing_imports = true
strict = true
